# RQSSFramework

./: .gitignore  CITATION.cff  README.md  setup.cfg
RQSSFramework/: EntitySchemaExtractor.py  Queries.py  README.md  RQSS_Extractor.py  RQSS_Framework_Runner.py  RQSS_Presenter.py  ShExes.py
RQSSFramework/Accuracy/: LiteralSyntaxChecking.py  TripleSemanticChecking.py  TripleSyntaxChecking.py
RQSSFramework/Amount_of_Data/: AmountOfDataComputing.py
RQSSFramework/Availability/: DereferencePossibility.py
RQSSFramework/Believability/: HumanReferenceInItemChecking.py
RQSSFramework/Completeness/: ClassesPropertiesSchemaCompletenessChecking.py  PropertyCompletenessChecking.py  SchemaBasedRefPropertiesCompletenessChecking.py
RQSSFramework/Conciseness/: ReferenceSharingChecking.py
RQSSFramework/utils/: lists.py  (+2 more)
tests/: test_DereferencePossibility.py  test_TestClassesPropertiesSchemaCompletenessChecker.py  test_TestDNSBLBlacklistChecker.py  test_TestDereferency.py  test_TestExternalURIsFreshnessChecker.py  test_TestExternalURIsTimelinessChecker.py  test_TestExternalURIsVolatilityChecker.py  test_TestFrameworkRunner.py  test_TestHumanReferenceInItemChecker.py  test_TestLicenseExistanceChecker.py  test_TestLiteralSyntaxChecker.py  test_TestMultilingualSourcesAndFactsChecker.py  test_TestPropertyConsistencyChecker.py  test_TestRefPropertiesCompletenessChecker.py  test_TestReferenceFreshnessChecker.py  test_TestSchemaBasedRefPropertiesCompletenessChecker.py  test_TestTLSChecker.py  test_TestTripleSemanticChecker.py  test_TestTriplesRangeConsistencyChecker.py
(+28 files in other folders)
