[metadata]
name = RQSSFramework
url = https://github.com/seyedahbr/RQSSFramework
description = Python Referencing Quality Scoring Framework
author = Seyed Amir Hosseini Beghaeiraveri
author-email = sh200@hw.ac.uk
summary = Python Referencing Quality Scoring Framework
license = CC0 1.0 Universal
python-requires = >=3.8
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Framework
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3.8
keywords =
    rdf
    provenance
    data quality

[files]
packages =
    RQSSFramework

[entry_points]
console_scripts =
    extractor = RQSSFramework.RQSS_Extractor:RQSS_Extractor
    runner = RQSSFramework.RQSS_Framework_Runner:RQSS_Framework_Runner